# rem

./: .gitignore  help.fmt  rem.sh
help/: Makefile  cut.sh  formatter.sh  help.fmt  shade.sh
rust/: Cargo.toml  lifetime  lifetime.rs
rust/src/: command.rs  config.rs  exec.rs  main.rs  select.rs
shell/: rem.sh  rem_edit.sh  rem_help.sh  rem_query.sh
