[package]
name = "rem-rs"
version = "0.0.1"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
description = "Over-engineered 'Move to Trash' script"
repository = "https://github.com/Vanille-N/rem/"
license = "MIT OR Apache-2.0"
keywords = ["rm", "trash", "remove"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.*"
#rand = "0.8.*"
